--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Website test</h1>
-<p>Hoi Ilseee, dit is mn website. mooi he</p>
+<p>Hoi, dit is mn website. mooi he</p>
 </body>
 </html>
