--- a/index.html
+++ b/index.html
@@ -1,7 +1,51 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Website test</h1>
-<p>Hoi, dit is mn website. mooi he</p>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <title>Assignment 1 Web Technology</title>
+
+  <!--Bootstrap stuff-->
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
+  <!--own stylesheet -->
+   <link rel="stylesheet" type="text/css" href="style.css">
+
+  </head>
+  <body>
+
+    <div class = "pageheader">
+      <div class = "headertxt">
+        <h1> welcome to the page </h1>
+      </div>
+      <div class = "headerimg">
+        <img id="imgtop" src="https://media.giphy.com/media/9wBy4UUTzeJ5S/source.gif" alt="kerstkrans" height="50">
+      </div>
+    </div>
+
+    <div class = "TopBar">
+      <div class = "header">
+        <h2>Trade your stuff here!</h1>
+      </div>
+      <div class = "login">
+        <p>Login</p>
+      </div>
+      <div class = "search">
+        <p>Search</p>
+      </div>
+    </div>
+    <main>
+
+    </main>
+
+
+  </body>
+  <!--Bootstrap stuff-->
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 </html>
