--- a/index.html
+++ b/index.html
@@ -15,31 +15,174 @@
 
   </head>
   <body>
-
     <div class = "pageheader">
       <div class = "headertxt">
-        <h1> welcome to the page </h1>
+        <h1> Welcome </h1>
       </div>
       <div class = "headerimg">
         <img id="imgtop" src="https://media.giphy.com/media/9wBy4UUTzeJ5S/source.gif" alt="kerstkrans" height="50">
       </div>
     </div>
-
     <div class = "TopBar">
       <div class = "header">
-        <h2>Trade your stuff here!</h1>
-      </div>
-      <div class = "login">
-        <p>Login</p>
-      </div>
-      <div class = "search">
-        <p>Search</p>
+        <h2>Trade your christmas presents here!</h2>
       </div>
     </div>
+
+    <nav class="navbar navbar-expand-sm">
+      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+        login
+      </a>
+      <form class="form-inline">
+        <input class="form-control" type="text" placeholder="Search">
+        <button class="btn btn-success" type="button">Search</button>
+      </form>
+      <div class="dropdown-menu">
+        <div class="form-group">
+          <label for="usr">Username:</label>
+          <input type="text" class="form-control" id="usr">
+        </div>
+        <div class="form-group">
+          <label for="pwd">Password:</label>
+          <input type="password" class="form-control" id="pwd">
+        </div>
+      </div>
+    </nav>
+
     <main>
+      <div class="maintextbox">
+        <p class="maintext">Received a christmas present and don't want to put it in the basement for the next, well, few years.
+        You are at the right spot! <br><br> Every year millions of christmas presents are not used or 'put away for later'.
+        Especially those bix boxes you receive from work are filled with a lot of stuff you actually do not use.<br><br>
+        Don't worry, you're not the only one. Let's trade! <br><br>
+        </p>
+      </div>
+      <div class="donate">
+        <p class="maintext">Feeling good and want to donate your Christmas present to charity? </p>
+        <a href="#" class="btn btn-primary donbut">Donate!</a>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="http://weclipart.com/gimg/4B69D77980E5B22F/christmas-presents-clip-art-happy-holidays-830x889.png" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Christmas present</h4>
+          <p class="card-text">description of the present in max 150 tokens</p>
+          <button type="button" class="btn btn-primary trreq">Send trade request</button>
+          <div class="trade">
+            <div class="form-group">
+              <label for="comment">Request:</label>
+              <textarea class="form-control" rows="5" id="comment"></textarea>
+              <button type="button" class="btn btn-primary send">Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="http://weclipart.com/gimg/4B69D77980E5B22F/christmas-presents-clip-art-happy-holidays-830x889.png" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Christmas present</h4>
+          <p class="card-text">description of the present in max 150 tokens</p>
+          <button type="button" class="btn btn-primary trreq">Send trade request</button>
+          <div class="trade">
+            <div class="form-group">
+              <label for="comment">Request:</label>
+              <textarea class="form-control" rows="5" id="comment"></textarea>
+              <button type="button" class="btn btn-primary send">Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="http://weclipart.com/gimg/4B69D77980E5B22F/christmas-presents-clip-art-happy-holidays-830x889.png" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Christmas present</h4>
+          <p class="card-text">description of the present in max 150 tokens</p>
+          <button type="button" class="btn btn-primary trreq">Send trade request</button>
+          <div class="trade">
+            <div class="form-group">
+              <label for="comment">Request:</label>
+              <textarea class="form-control" rows="5" id="comment"></textarea>
+              <button type="button" class="btn btn-primary send">Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="http://weclipart.com/gimg/4B69D77980E5B22F/christmas-presents-clip-art-happy-holidays-830x889.png" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Christmas present</h4>
+          <p class="card-text">description of the present in max 150 tokens</p>
+          <button type="button" class="btn btn-primary trreq">Send trade request</button>
+          <div class="trade">
+            <div class="form-group">
+              <label for="comment">Request:</label>
+              <textarea class="form-control" rows="5" id="comment"></textarea>
+              <button type="button" class="btn btn-primary send">Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="http://weclipart.com/gimg/4B69D77980E5B22F/christmas-presents-clip-art-happy-holidays-830x889.png" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Christmas present</h4>
+          <p class="card-text">description of the present in max 150 tokens</p>
+          <button type="button" class="btn btn-primary trreq">Send trade request</button>
+          <div class="trade">
+            <div class="form-group">
+              <label for="comment">Request:</label>
+              <textarea class="form-control" rows="5" id="comment"></textarea>
+              <button type="button" class="btn btn-primary send">Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="http://weclipart.com/gimg/4B69D77980E5B22F/christmas-presents-clip-art-happy-holidays-830x889.png" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Christmas present</h4>
+          <p class="card-text">description of the present in max 150 tokens</p>
+          <button type="button" class="btn btn-primary trreq">Send trade request</button>
+          <div class="trade">
+            <div class="form-group">
+              <label for="comment">Request:</label>
+              <textarea class="form-control" rows="5" id="comment"></textarea>
+              <button type="button" class="btn btn-primary send">Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="http://weclipart.com/gimg/4B69D77980E5B22F/christmas-presents-clip-art-happy-holidays-830x889.png" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Christmas present</h4>
+          <p class="card-text">description of the present in max 150 tokens</p>
+          <button type="button" class="btn btn-primary trreq">Send trade request</button>
+          <div class="trade">
+            <div class="form-group">
+              <label for="comment">Request:</label>
+              <textarea class="form-control" rows="5" id="comment"></textarea>
+              <button type="button" class="btn btn-primary send">Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card-img-top" src="http://weclipart.com/gimg/4B69D77980E5B22F/christmas-presents-clip-art-happy-holidays-830x889.png" alt="Card image" style="width:100%">
+        <div class="card-body">
+          <h4 class="card-title">Christmas present</h4>
+          <p class="card-text">description of the present in max 150 tokens</p>
+          <button type="button" class="btn btn-primary trreq">Send trade request</button>
+          <div class="trade">
+            <div class="form-group">
+              <label for="comment">Request:</label>
+              <textarea class="form-control" rows="5" id="comment"></textarea>
+              <button type="button" class="btn btn-primary send">Send</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </main>
-
 
   </body>
   <!--Bootstrap stuff-->
@@ -48,4 +191,5 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src='script.js'></script>
 </html>
