--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </a>
       <form class="form-inline">
         <input class="form-control" type="text" placeholder="Search">
-        <button class="btn btn-success" type="button">Search</button>
+        <button class="btn btn-success sbt" type="button">Search</button>
       </form>
       <div class="dropdown-menu">
         <div class="form-group">
